--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,5 +22,5 @@
     "downlevelIteration": true
   },
   "include": ["src"],
-  "exclude": ["**/*.test.ts"]
+  "exclude": ["**/*.test.ts", "src/setupProxy.js"]
 }
